//
// Created by diogo on 01/01/2026.
//

#ifndef LETI_ESOFT_25_26_B1_VACCINEDTO_H
#define LETI_ESOFT_25_26_B1_VACCINEDTO_H


#include <string>

struct VaccineDTO {
    std::string typeCode;
    std::string brand;
    std::string technology;
};

#endif //LETI_ESOFT_25_26_B1_VACCINEDTO_H
